# serializer version: 1
# name: test_array_statement_basic
  dict({
    <class 'compiler.ast.VariableDeclaration'>: dict({
      'ident': Token('IDENTIFIER', 'x'),
      'rvalue': dict({
        <class 'compiler.ast.ArrayLiteral'>: dict({
          'members': dict({
            <class 'compiler.ast.ArrayElements'>: dict({
              'members': list([
                dict({
                  <class 'compiler.ast.ArrayElement'>: dict({
                    'element': dict({
                      <class 'compiler.ast.IntLiteral'>: dict({
                        'value': 2,
                      }),
                    }),
                  }),
                }),
                dict({
                  <class 'compiler.ast.ArrayElement'>: dict({
                    'element': dict({
                      <class 'compiler.ast.Term'>: dict({
                        'left': dict({
                          <class 'compiler.ast.IntLiteral'>: dict({
                            'value': 3,
                          }),
                        }),
                        'op': Token('PLUS', '+'),
                        'right': dict({
                          <class 'compiler.ast.IntLiteral'>: dict({
                            'value': 3,
                          }),
                        }),
                      }),
                    }),
                  }),
                }),
              ]),
            }),
          }),
        }),
      }),
    }),
  })
# ---
# name: test_array_statement_basic.1
  dict({
    <class 'compiler.ast.VariableDeclaration'>: dict({
      'fields': dict({
        'rvalue': dict({
          <class 'compiler.ast.ArrayLiteral'>: dict({
            'fields': dict({
              'members': dict({
                <class 'compiler.ast.ArrayElements'>: dict({
                  'fields': dict({
                    'members': list([
                      dict({
                        <class 'compiler.ast.ArrayElement'>: dict({
                          'fields': dict({
                            'element': dict({
                              <class 'compiler.ast.IntLiteral'>: dict({
                                'fields': dict({
                                }),
                                'type': <class 'compiler.langtypes.Int'>,
                              }),
                            }),
                          }),
                          'type': <class 'compiler.langtypes.Int'>,
                        }),
                      }),
                      dict({
                        <class 'compiler.ast.ArrayElement'>: dict({
                          'fields': dict({
                            'element': dict({
                              <class 'compiler.ast.Term'>: dict({
                                'fields': dict({
                                  'left': dict({
                                    <class 'compiler.ast.IntLiteral'>: dict({
                                      'fields': dict({
                                      }),
                                      'type': <class 'compiler.langtypes.Int'>,
                                    }),
                                  }),
                                  'right': dict({
                                    <class 'compiler.ast.IntLiteral'>: dict({
                                      'fields': dict({
                                      }),
                                      'type': <class 'compiler.langtypes.Int'>,
                                    }),
                                  }),
                                }),
                                'type': <class 'compiler.langtypes.Int'>,
                              }),
                            }),
                          }),
                          'type': <class 'compiler.langtypes.Int'>,
                        }),
                      }),
                    ]),
                  }),
                  'type': <class 'compiler.langtypes.Int'>,
                }),
              }),
            }),
            'type': <class 'compiler.langtypes.Array'>,
          }),
        }),
      }),
      'type': <class 'compiler.langtypes.Array'>,
    }),
  })
# ---
# name: test_array_with_annotation
  dict({
    <class 'compiler.ast.VariableDeclaration'>: dict({
      'ident': Token('IDENTIFIER', 'x'),
      'rvalue': dict({
        <class 'compiler.ast.ArrayLiteral'>: dict({
          'declared_type': dict({
            <class 'compiler.ast.TypeAnnotation'>: dict({
              'ty': Token('IDENTIFIER', 'int'),
            }),
          }),
          'members': dict({
            <class 'compiler.ast.ArrayElements'>: dict({
              'members': list([
                dict({
                  <class 'compiler.ast.ArrayElement'>: dict({
                    'element': dict({
                      <class 'compiler.ast.IntLiteral'>: dict({
                        'value': 1,
                      }),
                    }),
                  }),
                }),
              ]),
            }),
          }),
        }),
      }),
    }),
  })
# ---
# name: test_array_with_annotation.1
  dict({
    <class 'compiler.ast.VariableDeclaration'>: dict({
      'fields': dict({
        'rvalue': dict({
          <class 'compiler.ast.ArrayLiteral'>: dict({
            'fields': dict({
              'declared_type': dict({
                <class 'compiler.ast.TypeAnnotation'>: dict({
                  'fields': dict({
                  }),
                  'type': <class 'compiler.langtypes.Int'>,
                }),
              }),
              'members': dict({
                <class 'compiler.ast.ArrayElements'>: dict({
                  'fields': dict({
                    'members': list([
                      dict({
                        <class 'compiler.ast.ArrayElement'>: dict({
                          'fields': dict({
                            'element': dict({
                              <class 'compiler.ast.IntLiteral'>: dict({
                                'fields': dict({
                                }),
                                'type': <class 'compiler.langtypes.Int'>,
                              }),
                            }),
                          }),
                          'type': <class 'compiler.langtypes.Int'>,
                        }),
                      }),
                    ]),
                  }),
                  'type': <class 'compiler.langtypes.Int'>,
                }),
              }),
            }),
            'type': <class 'compiler.langtypes.Array'>,
          }),
        }),
      }),
      'type': <class 'compiler.langtypes.Array'>,
    }),
  })
# ---
# name: test_empty_array
  dict({
    <class 'compiler.ast.VariableDeclaration'>: dict({
      'ident': Token('IDENTIFIER', 'x'),
      'rvalue': dict({
        <class 'compiler.ast.ArrayLiteral'>: dict({
          'declared_type': dict({
            <class 'compiler.ast.TypeAnnotation'>: dict({
              'ty': Token('IDENTIFIER', 'int'),
            }),
          }),
        }),
      }),
    }),
  })
# ---
# name: test_empty_array.1
  dict({
    <class 'compiler.ast.VariableDeclaration'>: dict({
      'fields': dict({
        'rvalue': dict({
          <class 'compiler.ast.ArrayLiteral'>: dict({
            'fields': dict({
              'declared_type': dict({
                <class 'compiler.ast.TypeAnnotation'>: dict({
                  'fields': dict({
                  }),
                  'type': <class 'compiler.langtypes.Int'>,
                }),
              }),
            }),
            'type': <class 'compiler.langtypes.Array'>,
          }),
        }),
      }),
      'type': <class 'compiler.langtypes.Array'>,
    }),
  })
# ---
